@@ -12,6 +12,7 @@ import java.util.Map;
 
 import com.fasterxml.jackson.annotation.JsonPropertyDescription;
 import com.gentics.mesh.core.rest.common.RestModel;
+import io.vertx.core.json.JsonObject;
 
 /**
  * POJO for a schema change.
@@ -207,18 +208,19 @@ public class SchemaChangeModel implements RestModel {
 	/**
 	 * Create a add field change.
 	 * 
-	 * @param fieldName
-	 *            Field key
-	 * @param type
-	 *            Field type
-	 * @param label
-	 *            Field label
+	 * @param fieldName Field key
+	 * @param type Field type
+	 * @param label Field label
+	 * @param elasticSearch Field elastic search properties
 	 * @return
 	 */
-	public static SchemaChangeModel createAddFieldChange(String fieldName, String type, String label) {
+	public static SchemaChangeModel createAddFieldChange(String fieldName, String type, String label, JsonObject elasticSearch) {
 		SchemaChangeModel change = new SchemaChangeModel(ADDFIELD, fieldName);
 		change.getProperties().put(SchemaChangeModel.TYPE_KEY, type);
 		change.getProperties().put(SchemaChangeModel.LABEL_KEY, label);
+		if (elasticSearch != null) {
+			change.getProperties().put(SchemaChangeModel.ELASTICSEARCH_KEY, elasticSearch.encode());
+		}
 		return change;
 	}
 
